--- a/home/myCenter/replacePicture.html
+++ b/home/myCenter/replacePicture.html
@@ -39,11 +39,12 @@
 
             <!-- 第二行的按钮区域 -->
             <div class="row2">
+                <input type="file" id="selectFile" style="display: none;"
+                    accept="image/jpeg,image/png,image/bmp,image/gif" />
                 <button type="button" class="layui-btn" id="uploadFile">上传</button>
                 <button type="button" class="layui-btn layui-btn-danger">确定</button>
             </div>
         </div>
-        <input type="file" id="selectFile" style="display: none;" accept="image/jpeg,image/png,image/bmp,image/gif">
     </div>
     <script src="/assets/lib/jquery.js"></script>
     <script src="/assets/lib/cropper/Cropper.js"></script>
