--- a/home/aeticle/article-management.html
+++ b/home/aeticle/article-management.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
-    <link rel="stylesheet" href="/assets/css/myCenter/article-management.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="/assets/css/aeticle/article-management.css">
+    <title>文章管理</title>
 </head>
 
 <body>
@@ -40,7 +40,7 @@
     <script src="/assets/js/baseAPI.js"></script>
     <script src="/assets/lib/layui/layui.all.js"></script>
     <script src="/assets/lib/template-web.js"></script>
-    <script src="/assets/js/myCenter/article-management.js"></script>
+    <script src="/assets/js/aeticle/article-management.js"></script>
     <script type="text/html" id="tpl-table">
         {{each data}}
         <tr>
